Entities and Authtoken Draft

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
       "homepage": "https://getwela.com/"
     }
   ],
-  "require-dev": {
-    "gregwar/cache": "1.0.*"
+  "require": {
+    "gregwar/cache": "1.0.*",
+    "guzzlehttp/guzzle": "~6.0"
   },
   "autoload": {
     "psr-4": {
